apps/base/mealie/mealie-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie-ingressroute
  namespace: mealie
  annotations:
    gethomepage.dev/href: "https://${SUBDOMAIN:=placeholder}.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Mealie"
    gethomepage.dev/description: "Self-hosted recipe manager and meal planner"
    gethomepage.dev/app: mealie
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/mealie.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${SUBDOMAIN:=placeholder}.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
